--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,8 @@ android:
     - tools
     - build-tools-23.0.2
     - android-23
+    - extra-google-m2repository
+    - extra-android-m2repository
 
 script: ./gradlew build
 
