fix lint warning

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -73,7 +73,7 @@ android {
     }
 
     lintOptions {
-        disable 'IconDensities','InvalidPackage'
+        disable 'IconDensities','InvalidPackage','IconMissingDensityFolder'
     }
 
     packagingOptions {
