upgrade gradle fix lint warning

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -73,6 +73,7 @@ android {
     }
 
     lintOptions {
+        abortOnError false
         disable 'IconDensities','InvalidPackage','IconMissingDensityFolder'
     }
 
